src/frontend/scss/layout/_common.scss
/* ... */
.show-for-large{
	@include breakpoint(large) {
		display: block;
	}
}

.show-for-xlarge{
	@include breakpoint(xlarge) {
		display: block;
	}
}

.show-for-xxlarge{
	@include breakpoint(xxlarge) {
		display: block;
	}
}

.hide-for-all{
	display: none;
}

.copyright-statement {
	position: absolute;
	bottom: 0px;
	right: 0px;
	background: rgba(255, 255, 255, .8);
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
}
.carousel-copyright-statement {
    position: absolute;
    bottom: 0;
    width: 100vw;
    text-align: right;
}

.carousel-copyright-statement .text {
    padding: 5px;
    background: rgba(255, 255, 255, .8);
	display: inline-block;
	margin-right: 14px;
}

// @media screen and (max-width: 764px) {
//     .carousel-copyright-statement .text {
// 		margin-right: 0px;
// 	}
// }

